--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -2,4 +2,5 @@ psycopg2~=2.9.10
 django-filter>=2.0
 contexttimer
 # QA checks
-openwisp-utils[qa] @ https://github.com/openwisp/openwisp-utils/tarball/1.2
+
+git+https://github.com/Insatroute/openwisp-utils.git@main#egg=openwisp_utils[qa]
